[tool.poetry]
name = "inflammation"
version = "1.0.0"
description = "Inflammation stuff"
authors = ["Harry Saunders <harry.saunders@ukaea.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
